src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_with_multiple_children_no_confirmation-5.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_with_multiple_children_no_confirmation  ◆ COMPLETE                                                                                                   
 allocated ##.#K   reclaim ##.#K   apparent 44.0K   7 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────┤│subfolder1                        │
││                                                                                                              │████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                              │████████████████████████████████████████││allocated ##.#K                   │
││                                                                                                              │████████████████████████████████████████││reclaim   ##.#K                   │
││                                                                                                              │████████████████████████████████████████││apparent 12.0K · entries 4        │
││                                                                                                              │████████████████████████████████████████││identity  Inod[...]ber: ######## }│
││                                                                                                              │████████████████████████████████████████││links     # · [...]   materialized│
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                    file1                                                     │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                 16.0K (36%)                                                  │████████████████████████████████████████││                                  │
││                                                      ╔ ! PERMANENT DIRECTORY DELETION ════════════════════════════════════════════╗███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║/tmp/excise_tests/delete_folder_with_multiple_children_no_confirmation/sub… ║███████████████████││                                  │
││                                                      ║identity Inode { device_id: ########, inode_number: ######## }              ║███████████████████││                                  │
││                                                      ║5 planned entries · 12.0K logical                                           ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║This cannot be undone. New or changed entries are skipped.                  ║███████████████████││                                  │
││                                                      ║SESSION-ONLY REDUCED GUARDRAILS ACTIVE                                      ║ descendants)██████││                                  │
││                                                      ║Press y to arm permanent deletion.                                          ║███████████████████││                                  │
│├──────────────────────────────────────────────────────║[Esc] cancel                                                                ║███████████████████││                                  │
││                                                      ║                                                                            ║27%)███████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝███████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                    file2                                                     │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                 16.0K (36%)                                                  │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
└┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
