src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_with_multiple_children_no_confirmation-6.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_with_multiple_children_no_confirmation  ◆ COMPLETE                                                                                                   
 allocated ##.#K   reclaim ##.#K   apparent 44.0K   7 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────┤│subfolder1                        │
││                                                                                                              │████████████████████████████████████████││◆ COMPLETE · directory            │
││                                                                                                              │████████████████████████████████████████││allocated ##.#K                   │
││                                                                                                              │████████████████████████████████████████││reclaim   ##.#K                   │
││                                                                                                              │████████████████████████████████████████││apparent 12.0K · entries 4        │
││                                                                                                              │████████████████████████████████████████││identity  Inod[...]ber: ######## }│
││                                                                                                              │████████████████████████████████████████││links     4 · [...]   materialized│
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                    file1                                                     │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                 16.0K (36%)                                                  │████████████████████████████████████████││                                  │
││                                                      ╔ ! PERMANENT DELETION ACTIVE ═══════════════════════════════════════════════╗███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║Executing 5 planned identities.                                             ║███████████████████││                                  │
││                                                      ║Every entry is revalidated immediately before mutation.                     ║███████████████████││                                  │
││                                                      ║New and changed entries are never swept.                                    ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║[Esc/q] interruption options                                                ║███████████████████││                                  │
││                                                      ║                                                                            ║ descendants)██████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
│├──────────────────────────────────────────────────────║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║27%)███████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ║                                                                            ║███████████████████││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝███████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                    file2                                                     │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                 16.0K (36%)                                                  │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
││                                                                                                              │████████████████████████████████████████││                                  │
└┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
