src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_with_multiple_children_no_confirmation-7.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[6]"
---
 Total: 32.0K (3 files), freed: 12.0K | /tmp/excise_tests/delete_folder_with_multiple_children_no_confirmation                                                                                
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                           file1                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                        16.0K (50%)                                                                                         │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                   ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                           Are you sure you want to quit?                                                            │                  │
├───────────────────│                                                                                                                                                     │──────────────────┤
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                        (y/n)                                                                        │                  │
│                   │                                                                                                                                                     │                  │
│                   └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                  │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                           file2                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                        16.0K (50%)                                                                                         │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit
