src/tests/cases/snapshots/excise__tests__cases__ui__delete_folder_with_multiple_children_no_confirmation.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_folder_with_multiple_children_no_confirmation  ◆ COMPLETE                                                                                                   
 allocated ##.#K   reclaim ##.#K   apparent 44.0K   7 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                              │                                        ││bounds, state, and actions.       │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                    file1                                                     │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                 16.0K (36%)                                                  │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │      subfolder1/ (+4 descendants)      ││                                  │
││                                                                                                              │                                        ││                                  │
│├──────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                        ││                                  │
││                                                                                                              │              12.0K (27%)               ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                    file2                                                     │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                 16.0K (36%)                                                  │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
││                                                                                                              │                                        ││                                  │
└┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · ! REDUCED DELETE GUARD · REDUCED MOTION
